done re-set up transaction api

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ TOKEN_KEY=ckmecnajnnpencieno18t362t4jncanejncakaj291023jncaklmyryg
 
 PATH_TRIP_IMAGES=http://localhost:4000/uploads/trips/
 PATH_TRIP_AVATAR=http://localhost:4000/uploads/avatars/
-PATH_TRIP_AVATAR=http://localhost:4000/uploads/proofs/
+PATH_TRIP_PROOF=http://localhost:4000/uploads/proofs/
