done prepare socket.io

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ TOKEN_KEY=ckmecnajnnpencieno18t362t4jncanejncakaj291023jncaklmyryg
 PATH_TRIP_IMAGES=http://localhost:4000/uploads/trips/
 PATH_AVATAR_IMAGES=http://localhost:4000/uploads/avatars/
 PATH_PROOF_IMAGES=http://localhost:4000/uploads/proofs/
+
+PATH_FRONTEND=http://localhost:3000/
