--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PATH_TRIP_IMAGES=http://localhost:4000/uploads/trips/
 PATH_AVATAR_IMAGES=http://localhost:4000/uploads/avatars/
 PATH_PROOF_IMAGES=http://localhost:4000/uploads/proofs/
 
-PATH_FRONTEND=http://localhost:3000/
+PATH_FRONTEND=http://localhost:3000
